[workspace]
members = ["hello_macro", "hello_macro_derive", "attr_macro", "show_macro"]

[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
description = "a playground for learning rust"
repository = "git@git.woa.com:yonglusun/rust-playground.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
unicode-segmentation = "1.5.0"
attr_macro = { path = "./attr_macro" }
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }
show_macro = { path = "./show_macro" }